--- a/program2/README
+++ b/program2/README
@@ -8,6 +8,7 @@ execute viewer
 
 -Assumptions
 Max vertices in a shape can have is 1000
+Assumes mtl files are in a folder called "objFiles" with obj files
 
 -Limits
 It can only draw one shape, not multiple from a control file
